<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#A6CFEF"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/refrigerator_information_category1" />

            <TextView
                android:id="@+id/tvTemperatureHumidity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:layout_weight="1">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/refrigerator_information_category2" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:text="TextView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            tools:layout_weight="7">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/refrigerator_information_category3" />

            <TextView
                android:id="@+id/tvFoodExpirationDatelist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:text="여기다가 유통기한 임박식품 넣을 거임\n나중에 레이아웃 변경하고 안쪽에 아이콘을 \n넣는다던지 해서 상세페이지로 \n이동하도록 하자" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>